# sapphire-hail

./: .gitignore  Cargo.toml  LICENSE-MIT  Log4rs.toml  README.md  bench-wrk.sh  gulpfile.js  locustfile.py  package.json
clockwork/: Cargo.toml
clockwork-handlebars/: Cargo.toml
clockwork-handlebars/src/: lib.rs
clockwork/src/: clockwork.rs  hyper_handler.rs  lib.rs  listener.rs  modules.rs  route_model.rs  routes.rs  worker.rs
public/: style.css
src/: controllers.rs  main.rs  models.rs
src/controllers/: home.rs  mod.rs  projects.rs
style/: _generic.scss  _layout.scss  style.scss
views/: _error.hbs  _layout.hbs  hello.hbs  home.hbs  number.hbs  rowtest.hbs
views/projects/: new.hbs  new_submit.hbs
webutil/: Cargo.toml
webutil/src/: html_string.rs  lib.rs  uri_value.rs
