[package]
name = "sapphire-hail"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

[dependencies]
dotenv = "0.8.0"
log = "0.3.6"
log4rs = {version = "0.4.8", features = ["toml"]}
handlebars = "0.18.2"
rustc-serialize = "0.3.19"
webutil = {path = "../webutil"}
clockwork = {path = "../clockwork"}
clockwork-handlebars = {path = "../clockwork-handlebars"}
